Fix slideshow image distortion when size adjusts for responsive

--- a/css/base.css
+++ b/css/base.css
@@ -333,7 +333,11 @@ l
 #controls .cycle-next  { background: url(../images/next.png) no-repeat; float: right; position: absolute; right: 10px; }
 #controls .cycle-next:hover, #controls .cycle-prev:hover  { opacity: 1; }
 
-.cycle-slideshow  { position: relative; z-index: 0 !important; }
+.cycle-slideshow {
+	overflow: hidden;
+	position: relative;
+	z-index: 0 !important;
+}
 
 .featured-article  { display: block; }
 .featured-entry  { position: relative; top: -85px; overflow: hidden; padding: 0; display: block; opacity: 0.8; }
